# internal/application/dto/user_dto.go
@@ -1,7 +1,13 @@
 package dto
 
 type UserDTO struct {
-	ID       string `json:"id"`
-	Username string `json:"username"`
-	Email    string `json:"email"`
+	Email       string `json:"email"`
+	Name        string `json:"name"`
+	FirstName   string `json:"first_name"`
+	LastName    string `json:"last_name"`
+	NickName    string `json:"nickname"`
+	Description string `json:"description"`
+	UserID      string `json:"user_id"`
+	AvatarURL   string `json:"avatar_url"`
+	Location    string `json:"location"`
 }
